# zerojoy

./: .gitattributes  .gitignore  README.md  hid.py  hidraw_read_report_desc.py  joystick.py  pyproject.toml  tasks.py  tourette.py  wacom_read_report.py
doc/: howas.md  joystick_desc.md  wacom_desc.md
src/zerojoy/: collections.py  hid.py  hidraw_read_report_desc.py  joystick.py  wacom_read_report.py
src/zerojoy/hotaw/: __init__.py
src/zerojoy/howas/: __init__.py
src/zerojoy/wacom/: adaptor.py  model.py  port.py
tests/: test_collections.py
usb_gadget/zerojoy/: bcdDevice  idProduct
usb_gadget/zerojoy/functions/hid.usb0/: report_desc
usb_gadget/zerojoy/strings/0x409/: manufacturer  product  serialnumber
zerojoy/: bcdDevice  idProduct  idVendor
zerojoy/configs/c.1/strings/0x409/: configuration
zerojoy/functions/hid.usb0/: report_desc
zerojoy/strings/0x409/: manufacturer  product  serialnumber
