[tool.poetry]
name = "zerojoy"
version = "0.2.2"
description = "Raspberry Pi Zero based HID joystick controller"
authors = ["Dylan Perry <dylan.perry@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.1"

[tool.poetry.scripts]
wacom-read-report = "zerojoy.wacom_read_report:log_hidraw_reports"
joystick = "zerojoy.joystick:main"
hidraw-read-report-desc = "zerojoy.hidraw_read_report_desc:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
